# llm-fun-project

./: main.py  pyproject.toml
ai-agents/: tool_caching.ipynb  tool_calling.ipynb
data/sql/: sales.db
ingestion/: test.ipynb
ingestion/chromadb/: docs2sql.py  excel2sql.py
ingestion/pgvector/: pgvector_quickstart.py  pgvector_service.py  quickstart.ipynb
langgraph/: test.ipynb
persona/: test.ipynb
rag/langchain/: indexing.ipynb  loader.ipynb  test.ipynb
splitter/: parent_child_splitter.ipynb
src/: AI-Math-Assistant Tool Calling.ipynb  Build Interactive LLM Agents with Tools.ipynb  Construct QA Bot - Lab.ipynb  In-Context Learning and Prompt Templates for Advanced AI.ipynb  Manual Tool-Calling Agent.ipynb  Summarize private documents using RAG LangChain and LLMs.ipynb  Text-to-chart in Jupyter notebook Visualization Agent.ipynb  lab - LangGraph101 Building Stateful AI Workflows.ipynb
vectordb/: test.ipynb
vectordb/chromadb/: filtering.ipynb
vectordb/pgvector/: pgvector_service.py  quickstart.ipynb
vectordb/pinecone/: pinecone_quickstart.py
vectordb/qdrant/: docs2sql.py
